<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="18dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/title_text"
        android:textSize="30sp"
        android:textStyle="bold" />
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            android:layout_width="match_parent"
            android:layout_height="90dp">
            <TextView
                android:id="@+id/greatFullText"
                android:layout_gravity="center"
                android:text="@string/greatfullText"
                android:textSize="19sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.cardview.widget.CardView>


    </RelativeLayout>
    <Button
        android:id="@+id/startButton"
        android:textColor="@color/design_default_color_primary_dark"
        android:background="@android:color/transparent"
        android:text="@string/getStartedText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>